--- a/index.html
+++ b/index.html
@@ -6,80 +6,85 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
+
+
 <body>
 <header class="header">
     <div class="header__content">
         <div class="logo">
-        <img class="logo__image" src="images/logo.png">
-        <h1 class="logo-header">
+            <img class="logo__image" src="images/logo.png">
+            <h1 class="logo-header">
             <div class="logo-header__top-text">orange</div>
             <div class="logo-header__bottom-text">rabbit</div>
-        </h1>
+            </h1>
         </div>
 
-
-    <nav class="nav">
-                <a class="nav__item nav__item--home">home</a>
-                <a class="nav__item nav__item--about">about</a>
-                <a class="nav__item nav__item--work">work</a>
-                <a class="nav__item nav__item--blog">blog</a>
-                <a class="nav__item nav__item--contact">contact</a>
-    </nav>
+        <nav class="nav">
+            <a class="nav__item nav__item--home">home</a>
+            <a class="nav__item nav__item--about">about</a>
+            <a class="nav__item nav__item--work">work</a>
+            <a class="nav__item nav__item--blog">blog</a>
+            <a class="nav__item nav__item--contact">contact</a>
+        </nav>
     </div>
 </header>
 
+
 <main class="main">
     <div class="slider">
-        <div class="slider__text slider__text--top">Do you like rabbits?</div>
-        <div class="slider__text slider__text--bottom">Do you like oranges?</div>
+        <div class="slider__content">
+            <div class="slider__text slider__text--top">Do you like rabbits?</div>
+            <div class="slider__text slider__text--bottom">Do you like oranges?</div>
+        </div>
     </div>
+
 
     <section class="section-news">
         <div class="section-news__content">
-        <article class="news">
-            <div class="news-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-            <a class="news-link">read more...</a>
-        </article>
 
-        <article class="news">
-            <div class="news-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-            <a class="news-link">read more...</a>
-        </article>
+            <article class="news">
+                <div class="news-text">
+                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+             <a class="news-link">read more...</a>
+            </article>
 
-        <article class="news">
-            <div class="news-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-            <a class="news-link">read more...</a>
-        </article>
+            <article class="news">
+                <div class="news-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+                <a class="news-link">read more...</a>
+            </article>
 
-        <article class="news">
-            <div class="news-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </div>
-            <a class="news-link">read more...</a>
-        </article>
+            <article class="news">
+             <div class="news-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                </div>
+             <a class="news-link">read more...</a>
+            </article>
 
-        </div>
+            <article class="news">
+                <div class="news-text">
+                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+             </div>
+                <a class="news-link">read more...</a>
+            </article>
 
+         </div>
     </section>
 
 
     <section class="section-team">
-
         <h2 class="section-team__header">
             Meet the team
         </h2>
+
         <section class="section-team__about">
-            <article class="team-member team-member--left ">
+            <article class="team-member">
                 <div class="team-member__header">
                     <div class="team-member__header--name">Hoof </div>
                     <div class="team-member__header--position">- Lead Designer</div>
@@ -87,13 +92,13 @@
 
                 <figure class="team-member__description">
                     <img class="team-member__avatar" src="./images/whiteBear.jpg">
-                <figcaption class="team-member__text">
-                    Hoof is our most talanted designer.  However he`s not the talkative type and I would advise not getting on the wrong side of him.
-                </figcaption>
+                    <figcaption class="team-member__text">
+                        Hoof is our most talanted designer.  However he`s not the talkative type and I would advise not getting on the wrong side of him.
+                    </figcaption>
                 </figure>
             </article>
 
-            <article class="team-member team-member--center">
+            <article class="team-member">
                 <div class="team-member__header">
                     <div class="team-member__header--name">Nibs </div>
                     <div class="team-member__header--position">- CEO/Director</div>
@@ -107,7 +112,7 @@
                 </figure>
             </article>
 
-            <article class="team-member team-member--right">
+            <article class="team-member">
                 <div class="team-member__header">
                     <div class="team-member__header--name">Squawk </div>
                     <div class="team-member__header--position">- Developer</div>
