scale slider-background.png, change max-width from 1200px to 1240px

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="styles/normalize.css">
+    <title>Mar1nka</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
@@ -91,7 +90,7 @@
                 </div>
 
                 <figure class="team-member__description">
-                    <img class="team-member__avatar" src="./images/whiteBear.jpg">
+                    <img class="team-member__avatar" src="images/team-white-bear.jpg">
                     <figcaption class="team-member__text">
                         Hoof is our most talanted designer.  However he`s not the talkative type and I would advise not getting on the wrong side of him.
                     </figcaption>
@@ -105,7 +104,7 @@
                 </div>
 
                 <figure class="team-member__description">
-                    <img class="team-member__avatar" src="./images/brounBear.jpg">
+                    <img class="team-member__avatar" src="images/team-brown-bear.jpg">
                     <figcaption class="team-member__text">
                         Nibs is our go to woman. She’s the ceo/director of orange rabbit and runs fast when she has too.
                     </figcaption>
@@ -119,7 +118,7 @@
                 </div>
 
                 <figure class="team-member__description">
-                    <img class="team-member__avatar" src="./images/blackBear.jpg">
+                    <img class="team-member__avatar" src="images/team-black-bear.jpg">
                     <figcaption class="team-member__text">
                         Squawk is no social bunny. But when it comes to programming he stands out from the crowd.
                     </figcaption>
